Adding image and transitions to about page, HTMl5 routing, and moved menu to a partial

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -43,7 +43,7 @@
 .content-panel {
     width: 100%;
     max-width: 900px;
-    min-height: 600px;
+    height: 600px;
     background: rgba(0, 0, 0, 0.75);
     position: relative;
     margin-top: @tab-height; //_tab_menu.less
