--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -1,4 +1,6 @@
 <div class="content-panel">
     <tab-menu menu-items="pages"></tab-menu>
-
+    <div ng-repeat="page in pages" ng-show="page.active" class="content-page">
+        <img ng-src="{{page.photo}}" alt=""/>
+    </div>
 </div>
