--- a/src/less/_bootstrap.less
+++ b/src/less/_bootstrap.less
@@ -50,8 +50,8 @@ h2, h3 {
 a {
     color: @site-inverted-colour;
     text-decoration: none;
-    &:active,
-    &:hover {
+    &:hover,
+    &:active {
         color: @site-highlight-colour;
         text-decoration: none;
     }
