--- a/src/less/about.less
+++ b/src/less/about.less
@@ -3,5 +3,16 @@
 .content-page {
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: @gutter-size;
+    .clearfix();
+    .image {
+        height: 100%;
+        float: left;
+//        .center-content();
+    }
+    .text {
+        height: 100%;
+        margin-left: @gutter-size;
+        float: left;
+    }
 }
