--- a/src/less/main.less
+++ b/src/less/main.less
@@ -49,3 +49,15 @@
     margin-top: @tab-height; //_tab_menu.less
     .center();
 }
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    > li {
+        background: url('/images/icons/star.png') no-repeat;
+        height: 15px;
+        padding-left: 25px;
+        margin-bottom: 10px;
+    }
+}
