--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -27,6 +27,9 @@
                     float: left;
                     font-size: @font-size-medium;
                     margin-right: @gutter-size;
+                    margin-bottom: 0;
+                    background: none;
+                    padding: 0;
                     &:last-child {
                         margin-right: 0;
                     }
@@ -57,6 +60,8 @@
             > li {
                 font-size: @font-size-medium;
                 margin: @gutter-size 0;
+                background: none;
+                padding: 0;
             }
         }
         &.active {
