Adding star asset, and fixing link styles

--- a/src/less/_bootstrap.less
+++ b/src/less/_bootstrap.less
@@ -47,7 +47,8 @@ h2, h3 {
     margin: 10px 0;
 }
 
-a {
+a,
+a:focus {
     color: @site-inverted-colour;
     text-decoration: none;
     &:hover,
