Adding handing for active pages, and fixed the .active style

--- a/src/less/_bootstrap.less
+++ b/src/less/_bootstrap.less
@@ -52,7 +52,7 @@ a:focus {
     color: @site-inverted-colour;
     text-decoration: none;
     &:hover,
-    &:active {
+    &.active {
         color: @site-highlight-colour;
         text-decoration: none;
     }
