--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -8,7 +8,7 @@
         </div>
         <div class="text">
             <h1>{{page.displayTitle}}</h1>
-            {{page.content}}
+            <div ng-bind-html="page.content | raw"></div>
         </div>
     </div>
 </div>
