Implementing links and routing for the about tabmenu

--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -1,5 +1,5 @@
 <div class="content-panel">
-    <tab-menu menu-items="pages"></tab-menu>
+    <tab-menu menu-items="pages" base-route="'/about'"></tab-menu>
     <div ng-repeat="page in pages" ng-show="page.active" class="content-page">
         <div class="image">
             <div>
