--- a/src/app/directives/tabMenu/tabMenu.tpl.html
+++ b/src/app/directives/tabMenu/tabMenu.tpl.html
@@ -1,6 +1,8 @@
 <div class="tab-menu">
     <div ng-repeat="item in menuItems" ng-class="{active:item.active}" ng-click="setActive(item)">
-        <div class="link">{{item.displayTitle}}</div>
+        <a href="{{baseRoute}}/{{item.title}}">
+            <div class="link">{{item.displayTitle}}</div>
+        </a>
         <div class="tab"></div>
     </div>
 </div>
