Updating content service to allow any endpoint, and rolling across to all controllers rather than direct JMApi access. Updated the collapsible directive to use parent scope for collapsing the content

--- a/src/app/directives/collapsible/collapsible.tpl.html
+++ b/src/app/directives/collapsible/collapsible.tpl.html
@@ -1,11 +1,11 @@
 <div class="collapsible">
     <img class="logo" ng-src="{{logo}}" alt=""/>
-    <div class="title" ng-click="visible = !visible">
+    <div class="title" ng-click="collapsed = !collapsed">
         <div ng-if="!!titleTemplate" ng-include="titleTemplate" onload="data = titleData"></div>
         <div ng-if="!titleTemplate">{{title}}</div>
     </div>
-    <div class="icon expand" ng-class="{open: visible}" ng-click="visible = !visible"></div>
-    <div ng-show="visible" class="collapsible-content slide-down">
+    <div class="icon expand" ng-class="{ open: !collapsed }" ng-click="collapsed = !collapsed"></div>
+    <div ng-show="collapsed" class="collapsible-content slide-down">
         <div ng-transclude></div>
     </div>
 </div>
