--- a/src/app/views/portfolio.tpl.html
+++ b/src/app/views/portfolio.tpl.html
@@ -1,14 +1,16 @@
 <div class="portfolio-container">
-    <div ng-repeat="portfolio in portfolios">
-        <div class="card-flip">
-            <div class="front">
-                <div>
-                    <img src="{{portfolio.logo}}" alt="{{portfolio.title}}"/>
+    <div ng-repeat="portfolio in portfolios" ng-class="{ selected: portfolio.active }">
+        <a href="{{portfolio.url}}" target="_blank">
+            <div class="card-flip">
+                <div class="front">
+                    <div>
+                        <img src="{{portfolio.logo}}" alt="{{portfolio.title}}"/>
+                    </div>
+                </div>
+                <div class="back">
+                    <p style="color: black">Some stuff</p>
                 </div>
             </div>
-            <div class="back">
-                <p style="color: black">Some stuff</p>
-            </div>
-        </div>
+        </a>
     </div>
 </div>
