--- a/src/less/experience.less
+++ b/src/less/experience.less
@@ -1,16 +1,23 @@
 @import (reference) 'main.less';
 
 .collapsible {
-    margin: 10px 0;
+    margin: (@gutter-size / 2) 0;
     .container {
         padding: 0;
-        .tile {
-            width: 100px;
-            height: 100px;
-            float: left;
-            background: white;
-            margin: 0 10px;
-            //@TODO Style this properly
+        .tiles {
+            margin-left: -(@gutter-size / 2);
+            > a {
+                .center-content();
+                width: 100px;
+                height: 100px;
+                float: left;
+                background: fadeout(@site-inverted-colour, 15%);
+                margin: 0 (@gutter-size / 2);
+                img {
+                    max-width: 80%;
+                    max-height: 80%;
+                }
+            }
         }
     }
 
