--- a/src/less/experience.less
+++ b/src/less/experience.less
@@ -14,8 +14,8 @@
                 background: fadeout(@site-inverted-colour, 15%);
                 margin: 0 (@gutter-size / 2);
                 img {
-                    max-width: 80%;
-                    max-height: 80%;
+                    max-width: 80px;
+                    max-height: 80px;
                 }
             }
         }
