--- a/src/app/views/portfolio.tpl.html
+++ b/src/app/views/portfolio.tpl.html
@@ -8,7 +8,10 @@
                     </div>
                 </div>
                 <div class="back">
-                    <p style="color: black">Some stuff</p>
+                    <div class="logo-small">
+                        <img src="{{portfolio.logo}}" alt="{{portfolio.displayTitle}}"/>
+                    </div>
+                    <div ng-bind-html="portfolio.content | raw"></div>
                 </div>
             </div>
         </a>
