--- a/src/less/portfolio.less
+++ b/src/less/portfolio.less
@@ -38,6 +38,19 @@
             .back {
                 padding: @gutter-size;
                 text-align: left;
+                color: @site-colour-dark;
+                .logo-small {
+                    text-align: center;
+                    margin-bottom: @gutter-size;
+                    img {
+                        max-width: 100px;
+                        max-height: 100px;
+                    }
+                }
+                p, a {
+                    color: @site-colour-dark;
+                    font-size: @font-size-medium;
+                }
                 .transform(rotateY(180deg));
             }
         }
