--- a/src/app/directives/tabMenu/tabMenu.less
+++ b/src/app/directives/tabMenu/tabMenu.less
@@ -12,7 +12,7 @@
         width: @tab-width;
         line-height: @tab-height;
         text-align: center;
-        background: rgba(0, 0, 0, 0.8);
+        background: @site-background-thick;
         position: relative;
         cursor: pointer;
         display: inline-block;
