--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -40,3 +40,5 @@
 @site-colour-medium: @site-base-colour;
 @site-colour-dark: darken(@site-base-colour, 20);
 @site-colour-light: lighten(@site-base-colour, 20);
+@site-background-thick: fadeout(@site-colour-dark, 25%);
+@site-background-thin: fadeout(@site-colour-dark, 40%);
