--- a/src/less/contact.less
+++ b/src/less/contact.less
@@ -21,5 +21,8 @@
                 }
             }
         }
+        @media screen and (max-width: @breakpoint-mobile) {
+            margin-bottom: @gutter-size;
+        }
     }
 }
