--- a/src/less/main.less
+++ b/src/less/main.less
@@ -23,6 +23,7 @@
 @import '_header.less';
 @import '_experience_title.less';
 @import '_footer.less';
+@import 'form/_contact.less';
 
 //Routes
 @import 'about.less';
@@ -49,12 +50,13 @@
 .content-panel {
     width: 100%;
     max-width: 900px;
-    height: 600px;
+    min-height: 600px;
     background: @site-background-thin;
     position: relative;
     margin-top: @tab-height; //_tab_menu.less
     padding: @gutter-size;
     .center();
+    .clearfix();
 }
 
 ul {
@@ -66,6 +68,36 @@ ul {
         height: 15px;
         padding-left: 25px;
         margin-bottom: 10px;
+    }
+}
+
+form {
+    margin-left: -@gutter-size;
+    .form-row {
+        margin-left: @gutter-size;
+        margin-bottom: @gutter-size;
+        input, label, textarea, select {
+            width: 100%;
+        }
+        input, select {
+            height: 30px;
+            line-height: 30px;
+            color: @site-colour-dark;
+            padding: 0 10px;
+        }
+        &.half {
+            float: left;
+            width: ~"calc(50% - @{gutter-size})";
+        }
+    }
+    @media screen and (max-width: @breakpoint-mobile) {
+        margin-left: 0;
+        .form-row {
+            margin-left: 0;
+            &.half {
+                width: 100%;
+            }
+        }
     }
 }
 
