Creating new forms directory and created a contact form controller, and added basic styling for ng-errors

--- a/src/less/_footer.less
+++ b/src/less/_footer.less
@@ -15,7 +15,7 @@
                 font-weight: bold;
             }
             .unavailable {
-                color: #FF251C;
+                color: @site-error-colour;
             }
             .soon {
                 color: #eea607;
