--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -37,6 +37,7 @@
 @site-base-colour: #595959;
 @site-inverted-colour: #ffffff;
 @site-highlight-colour: #009bff;
+@site-error-colour: #D05545;
 @site-colour-medium: @site-base-colour;
 @site-colour-dark: darken(@site-base-colour, 20);
 @site-colour-light: lighten(@site-base-colour, 20);
