--- a/src/less/main.less
+++ b/src/less/main.less
@@ -78,17 +78,25 @@ form {
         margin-bottom: @gutter-size;
         input, label, textarea, select {
             width: 100%;
+            outline: 0;
+            &.ng-invalid.ng-dirty {
+                border: 1px solid @site-error-colour;
+                background: lighten(@site-error-colour, 25%);
+            }
         }
         input, select {
             height: 30px;
             line-height: 30px;
-            color: @site-colour-dark;
             padding: 0 10px;
+        }
+        input, select, textarea {
+            color: @site-colour-dark;
         }
         button {
             padding: 10px 30px;
             background: @site-highlight-colour;
             border: 0;
+            outline: 0;
             font-size: @font-size-medium;
         }
         &.half {
