--- a/src/less/main.less
+++ b/src/less/main.less
@@ -79,9 +79,11 @@ form {
         input, label, textarea, select {
             width: 100%;
             outline: 0;
-            &.ng-invalid.ng-dirty {
-                border: 1px solid @site-error-colour;
-                background: lighten(@site-error-colour, 25%);
+            &.ng-invalid {
+                &.ng-touched.ng-dirty {
+                    border: 1px solid @site-error-colour;
+                    background: lighten(@site-error-colour, 25%);
+                }
             }
         }
         input, select {
@@ -98,6 +100,15 @@ form {
             border: 0;
             outline: 0;
             font-size: @font-size-medium;
+            &:disabled {
+                background: @site-colour-medium;
+                color: @site-colour-light;
+                .opacity(0.85);
+            }
+        }
+        label.error {
+            color: @site-error-colour;
+            font-size: @font-size-small;
         }
         &.half {
             float: left;
