Spinner and success/error message when submitting contact form

--- a/src/less/_footer.less
+++ b/src/less/_footer.less
@@ -21,7 +21,7 @@
                 color: #eea607;
             }
             .available {
-                color: #23c345;
+                color: @site-success-colour;
             }
         }
         @media screen and (max-width: @breakpoint-mobile) {
