--- a/src/less/form/_contact.less
+++ b/src/less/form/_contact.less
@@ -3,3 +3,10 @@
 .contact-form {
 
 }
+.message {
+    margin: 60px 0;
+    .center-content();
+    > div {
+        font-size: @font-size-large;
+    }
+}
