--- a/src/less/main.less
+++ b/src/less/main.less
@@ -136,3 +136,11 @@ span.highlight {
     font-weight: bold;
     color: @site-highlight-colour;
 }
+span {
+    &.success {
+        color: @site-success-colour;
+    }
+    &.error {
+        color: @site-error-colour;
+    }
+}
