--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -38,6 +38,7 @@
 @site-inverted-colour: #ffffff;
 @site-highlight-colour: #009bff;
 @site-error-colour: #D05545;
+@site-success-colour: #419d28;
 @site-colour-medium: @site-base-colour;
 @site-colour-dark: darken(@site-base-colour, 20);
 @site-colour-light: lighten(@site-base-colour, 20);
