--- a/src/partials/form/_contact.tpl.html
+++ b/src/partials/form/_contact.tpl.html
@@ -1,31 +1,31 @@
 <div ng-controller="FormContactCtrl">
-    <div class="message" ng-show="submitted || error">
-        <div ng-show="submitted">
+    <div class="message" ng-show="data.submitted || data.error">
+        <div ng-show="data.submitted">
             Thank you, your submission was <span class="success">successful</span>!
         </div>
-        <div ng-show="error">
+        <div ng-show="data.error">
             Sorry, we were <span class="error">unable</span> to submit your message. Please try again later.
         </div>
     </div>
-    <form name="formContact" ng-show="!submitted" novalidate>
+    <form name="formContact" ng-show="!data.submitted" novalidate>
         <div class="form-row">
             <label for="name">Your Name/Company*</label>
             <label class="error" ng-show="formContact.name.$touched && formContact.name.$dirty && formContact.name.$error.required">Please let me know who you are!</label>
-            <input name="name" id="name" ng-model="query.name" type="text" required/>
+            <input name="name" id="name" ng-model="data.query.name" type="text" required/>
         </div>
         <div class="form-row">
             <label for="email">Your Email Address*</label>
             <label class="error" ng-show="formContact.email.$touched && formContact.email.$dirty && (formContact.email.$error.required || formContact.email.$error.email)">Please enter a valid email.</label>
-            <input name="email" id="email" ng-model="query.email" type="email" required/>
+            <input name="email" id="email" ng-model="data.query.email" type="email" required/>
         </div>
         <div class="form-row half">
             <label for="budget">Expected Budget/Rate</label>
-            <input name="budget" id="budget" ng-model="query.budget" type="text"/>
+            <input name="budget" id="budget" ng-model="data.query.budget" type="text"/>
         </div>
         <div class="form-row half">
             <label for="duration">Estimated Duration*</label>
             <label class="error" ng-show="formContact.duration.$touched && formContact.duration.$dirty && formContact.duration.$error.required">Please choose an estimated duration.</label>
-            <select name="duration" id="duration" ng-model="query.duration" required>
+            <select name="duration" id="duration" ng-model="data.query.duration" required>
                 <option value=""></option>
                 <option value="1-3 months">1-3 Months</option>
                 <option value="3-6 months">3-6 Months</option>
@@ -35,12 +35,12 @@
         <div class="form-row">
             <label for="description">Project Description*</label>
             <label class="error" ng-show="formContact.description.$touched && formContact.description.$dirty && formContact.description.$error.required">Please enter a brief description.</label>
-            <textarea name="description" rows="5" id="description" ng-model="query.description" type="text" required></textarea>
+            <textarea name="description" rows="5" id="description" ng-model="data.query.description" type="text" required></textarea>
         </div>
         <div class="form-row">
             <button ng-click="submit()" ng-disabled="!formContact.$valid">
-                <span ng-show="!processing">Send</span>
-                <span ng-show="processing"><i class="fa fa-spinner fa-spin"></i></span>
+                <span ng-show="!data.processing">Send</span>
+                <span ng-show="data.processing"><i class="fa fa-spinner fa-spin"></i></span>
             </button>
         </div>
     </form>
