Adding a config variable to pull contact by title, and plugging it into the footer

--- a/src/partials/_footer.tpl.html
+++ b/src/partials/_footer.tpl.html
@@ -3,8 +3,8 @@
         <div class="contact">
             <h1>Contact</h1>
 
-            <div>E: <a href="mailto:mackjarred@gmail.com">mackjarred@gmail.com</a></div>
-            <div>M: 0401 439 364</div>
+            <div>E: <a href="mailto:{{details.email.detail}}">{{details.email.detail}}</a></div>
+            <div>M: {{details.phone.detail}}</div>
 
             <div class="employment-status">Employment Status: <span class="unavailable">Unavailable</span></div>
         </div>
