Adding availability factory and implementing on footer and contact page

--- a/src/app/views/contact.tpl.html
+++ b/src/app/views/contact.tpl.html
@@ -12,7 +12,12 @@
                 <div class="contact-type">{{detail.displayTitle}}:</div>
                 <div class="detail">{{detail.detail}}</div>
             </div>
+            <div class="employment-status">
+                <div class="contact-type">Availability:</div>
+                <div class="detail"><span class="{{availability.type}}">{{availability.status}}</span></div>
+            </div>
         </div>
+
     </div>
     <div class="half mobile">
         <h1>{{content.displayTitle}}</h1>
