--- a/src/less/main.less
+++ b/src/less/main.less
@@ -59,6 +59,22 @@
     .clearfix();
 }
 
+.employment-status {
+    margin-top: 10px;
+    > span {
+        font-weight: bold;
+    }
+    .unavailable {
+        color: @site-error-colour;
+    }
+    .soon {
+        color: #eea607;
+    }
+    .available {
+        color: @site-success-colour;
+    }
+}
+
 ul {
     padding: 0;
     margin: 0;
