Name update on model join

--- a/src/app/views/experience.tpl.html
+++ b/src/app/views/experience.tpl.html
@@ -21,7 +21,7 @@
         <div class="half">
             <h3>Skills and languages</h3>
             <ul>
-                <li ng-repeat="skill in job.skill">
+                <li ng-repeat="skill in job.skills">
                     {{skill}}
                 </li>
             </ul>
