Logo link to home

--- a/src/partials/_header.tpl.html
+++ b/src/partials/_header.tpl.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="site-logo">
             <div>
-                <img src="images/logos/jarred-mack.png" alt="Jarred Mack.com"/>
+                <a href="/"><img src="images/logos/jarred-mack.png" alt="Jarred Mack.com"/></a>
             </div>
             <div class="logo-content">
                 <div class="name">Jarred Mack</div>
