--- a/src/partials/_menu.tpl.html
+++ b/src/partials/_menu.tpl.html
@@ -3,5 +3,5 @@
     <li><a ng-class="{ active: (active == 'contact') }" href="/contact">Contact</a></li>
     <li><a ng-class="{ active: (active == 'experience') }" href="/experience">Experience</a></li>
     <li><a ng-class="{ active: (active == 'portfolio') }" href="/portfolio">Portfilio</a></li>
-    <li><a ng-class="{ active: (active == 'about') }" href="/">About Me</a></li>
+    <li><a ng-class="{ active: (active == 'about') }" href="/about">About Me</a></li>
 </ul>
