Fixing up the display styles for about pages

--- a/src/less/_bootstrap.less
+++ b/src/less/_bootstrap.less
@@ -68,8 +68,16 @@ a:focus {
         width: 50%;
         float: left;
     }
+    .third {
+        width: ~"calc(33% - @{gutter-size})";
+    }
+    .two-third {
+        width: ~"calc(66% - @{gutter-size})";
+    }
     @media screen and (max-width: @breakpoint-mobile) {
-        .half {
+        .half,
+        .third,
+        .two-third {
             width: 100%;
         }
     }
