--- a/src/less/about.less
+++ b/src/less/about.less
@@ -1,5 +1,6 @@
 @import (reference) 'main.less';
 
+@image-width: 300px;
 .content-page {
     width: 100%;
     height: 100%;
@@ -7,11 +8,22 @@
     .image {
         height: 100%;
         float: left;
-//        .center-content();
+        width: @image-width;
     }
     .text {
         height: 100%;
         margin-left: @gutter-size;
         float: left;
+        width: ~"calc(100% - @{image-width} - (@{gutter-size} * 2))";
+    }
+    @media screen and (max-width: @breakpoint-mobile) {
+        .image {
+            width: 100%;
+            .center-content();
+        }
+        .text {
+            margin: @gutter-size 0;
+            width: 100%;
+        }
     }
 }
