Keeping tabs open for usability purposes

--- a/src/app/directives/tabMenu/tabMenu.less
+++ b/src/app/directives/tabMenu/tabMenu.less
@@ -21,7 +21,8 @@
         .link {
             overflow: hidden;
             white-space: nowrap;
-            height: 0px;
+//            height: 0px;
+            height: @tab-height;
             .transition-property(height);
             .transition-duration(0.25s);
         }
