--- a/src/less/experience.less
+++ b/src/less/experience.less
@@ -19,6 +19,12 @@
                 }
             }
         }
+        .skills {
+            li.half {
+                margin-top: 0;
+                width: 50%;
+            }
+        }
     }
 
 }
