--- a/src/less/_bootstrap.less
+++ b/src/less/_bootstrap.less
@@ -79,6 +79,7 @@ a:focus {
         .third,
         .two-third {
             width: 100%;
+            margin-top: @gutter-size;
         }
     }
 }
