Fixing the transition between pages - needs a little tweaking still

--- a/src/app/views/about.tpl.html
+++ b/src/app/views/about.tpl.html
@@ -1,4 +1,4 @@
-<div class="content-panel">
+<div class="content-panel about">
     <tab-menu menu-items="pages" base-route="'/about'"></tab-menu>
     <div ng-repeat="page in pages" ng-if="page.active" class="content-page ng-fade">
         <div class="image" ng-if="!!page.photo">
