--- a/src/less/about.less
+++ b/src/less/about.less
@@ -1,14 +1,9 @@
 @import (reference) 'main.less';
 
 @image-width: 300px;
-.content-panel {
-    .clearfix();
-    position: relative;
+.content-panel.about {
     .content-page {
         width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
         padding: @gutter-size;
         .clearfix();
         .image {
