--- a/src/less/animations.less
+++ b/src/less/animations.less
@@ -30,6 +30,9 @@
         }
     }
     &.ng-leave {
+        position: absolute;
+        top: @gutter-size;
+        left: @gutter-size;
         opacity: 1;
         &.ng-leave-active {
             opacity: 0;
