--- a/src/less/main.less
+++ b/src/less/main.less
@@ -49,8 +49,8 @@
 
 .content-panel {
     width: 100%;
-    max-width: 900px;
-    min-height: 600px;
+    max-width: @panel-width;
+    min-height: @panel-height;
     background: @site-background-thin;
     position: relative;
     margin-top: @tab-height; //_tab_menu.less
