--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -19,6 +19,8 @@
 @footer-size: 150px;
 @side-nav-size: 200px;
 @container-width: 1200px;
+@panel-width: 900px;
+@panel-height: 600px;
 @breakpoint-mobile: 650px;
 @breakpoint-tablet: 1000px;
 @breakpoint-desktop: 1200px;
