Added a slight delay to the fadein to transition a little neater for text

--- a/src/less/animations.less
+++ b/src/less/animations.less
@@ -25,6 +25,7 @@
     }
     &.ng-enter {
         opacity: 0;
+        .transition-delay(0.1s);
         &.ng-enter-active {
             opacity: 1;
         }
