--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -46,3 +46,8 @@
 @site-colour-light: lighten(@site-base-colour, 20);
 @site-background-thick: fadeout(@site-colour-dark, 20%);
 @site-background-thin: fadeout(@site-colour-dark, 30%);
+
+/**
+ * Timing variables
+ */
+@transition-duration: 0.25s;
