--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -21,6 +21,7 @@
 @container-width: 1200px;
 @panel-width: 900px;
 @panel-height: 600px;
+@slide-height: 300px;
 @breakpoint-mobile: 650px;
 @breakpoint-tablet: 1000px;
 @breakpoint-desktop: 1200px;
