Adding an animation to the tab hover state

--- a/src/app/directives/tabMenu/tabMenu.less
+++ b/src/app/directives/tabMenu/tabMenu.less
@@ -18,6 +18,8 @@
         display: inline-block;
         margin-right: 10px;
 
+        .transition-property(background);
+        .transition-duration(@transition-duration);
         .link {
             overflow: hidden;
             white-space: nowrap;
