--- a/src/less/experience.less
+++ b/src/less/experience.less
@@ -2,6 +2,9 @@
 
 .collapsible {
     margin: (@gutter-size / 2) 0;
+    &:first-child {
+        margin-top: 0;
+    }
     .container {
         padding: 0;
         .tiles {
