Darkening mobile side nav to make it more readable

--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -47,7 +47,7 @@
         right: -@side-nav-size;
         width: @side-nav-size;
         z-index: 999;
-        background: @site-colour-light;
+        background: @site-colour-dark;
         padding: 0 @gutter-size;
 
         .transition-property(right);
