Link outline fix for firefox

--- a/src/less/_bootstrap.less
+++ b/src/less/_bootstrap.less
@@ -52,10 +52,12 @@ a,
 a:focus {
     color: @site-inverted-colour;
     text-decoration: none;
+    outline: 0;
     &:hover,
     &.active {
         color: @site-highlight-colour;
         text-decoration: none;
+        outline: 0;
     }
 }
 
