Adding scalable background to the site

--- a/src/less/_footer.less
+++ b/src/less/_footer.less
@@ -3,6 +3,7 @@
 .footer {
     background: @site-colour-medium;
     height: @footer-size;
+    z-index: 10;
     @media screen and (max-width: @breakpoint-mobile) {
         height: @footer-size * 1.25;
     }
