--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -5,6 +5,7 @@
 .header {
     background: @site-colour-medium;
     height: @header-size;
+    z-index: 10;
     .site-logo {
         .center-content(false);
         float: left;
