--- a/src/less/_bootstrap.less
+++ b/src/less/_bootstrap.less
@@ -70,6 +70,7 @@ a:focus {
     max-width: @container-width;
     height: 100%;
     position: relative;
+    z-index: 10;
     .center();
     .half {
         width: 50%;
