--- a/src/less/main.less
+++ b/src/less/main.less
@@ -41,10 +41,20 @@
  * Site global styles
  */
 .content {
-    background: url('/images/background.jpg') no-repeat center;
-    background-size: cover;
+    background: @background-sky;
     min-height: ~"calc(100% - @{header-size} - @{footer-size})";
     padding: @gutter-size 0;
+    position: relative;
+    .bg {
+        position: absolute;
+        width: 100%;
+        &.bottom {
+            bottom: 0;
+            height: 700px;
+            background: url('/images/bg-bottom.png') no-repeat center;
+            background-size: cover;
+        }
+    }
 }
 
 .content-panel {
