--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -47,6 +47,7 @@
 @site-colour-light: lighten(@site-base-colour, 20);
 @site-background-thick: fadeout(@site-colour-dark, 20%);
 @site-background-thin: fadeout(@site-colour-dark, 30%);
+@background-sky: #c1c3c4;
 
 /**
  * Timing variables
