--- a/src/less/portfolio.less
+++ b/src/less/portfolio.less
@@ -31,7 +31,7 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background: fadeout(@site-inverted-colour, 55%);
+                background: @site-inverted-light;
             }
             .front {
                 .center-content();
