Adding some colour to the background

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -41,7 +41,8 @@
  * Site global styles
  */
 .content {
-    background: @background-sky;
+    background: @background-sky-start;
+    background: -webkit-linear-gradient(@background-sky-start, @background-sky-end);
     min-height: ~"calc(100% - @{header-size} - @{footer-size})";
     padding: @gutter-size 0;
     position: relative;
