--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -47,8 +47,9 @@
 @site-colour-light: lighten(@site-base-colour, 20);
 @site-background-thick: fadeout(@site-colour-dark, 20%);
 @site-background-thin: fadeout(@site-colour-dark, 30%);
-@site-inverted-light: fadeout(@site-inverted-colour, 35%);
-@background-sky: #c1c3c4;
+@site-inverted-light: fadeout(@site-inverted-colour, 25%);
+@background-sky-start: #6383a9;
+@background-sky-end: #8FBAD0;
 
 /**
  * Timing variables
