--- a/src/partials/_menu.tpl.html
+++ b/src/partials/_menu.tpl.html
@@ -1,7 +1,7 @@
 <ul>
-    <li><a href="">Github</a></li>
+    <li><a href="https://github.com/JarredMack/jarredmack.com/" target="_blank">Github</a></li>
     <li><a ng-class="{ active: (active == 'contact') }" href="/contact">Contact</a></li>
     <li><a ng-class="{ active: (active == 'experience') }" href="/experience">Experience</a></li>
-    <li><a ng-class="{ active: (active == 'portfolio') }" href="/portfolio">Portfilio</a></li>
+    <li><a ng-class="{ active: (active == 'portfolio') }" href="/portfolio">Portfolio</a></li>
     <li><a ng-class="{ active: (active == 'about') }" href="/about">About Me</a></li>
 </ul>
