Fixing display issue for mobile menu

--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -44,7 +44,7 @@
         }
     }
     .side-nav {
-        position: absolute;
+        position: fixed;
         right: -@side-nav-size;
         width: @side-nav-size;
         z-index: 999;
